--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
+
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Web</title>
+    <title>Debuter en HTML</title>
+     <link rel="stylesheet" href="./css/style1.css">
 </head>
 <body>
-    <h1>coucou</h1>
+   <!--Ceci est un commentaire--> 
+   <h1>Les débuts en page web</h1>
+   <h2>Test des balises et css</h2>
+   <p class="premier">On remarque que le navigateur
+    créé un saut de ligne entre les titres, les paragraphes. <br>
+    Pour un saut de ligne dans un paragraphe, il faut ajouter un break.
+   </p>
+
+   <p class="deux">Pour afficher des symboles html dans une page, il existe des codes HTML. &lt;br&gt;   </p>
+   <p>
+    On peut faire des liens avec la balise &lt;a&gt;
+
+   <a href="https://www.happy-beez.net/caracteres-speciaux-html/">
+    Voici mon lien
+   </a>
+
+  
+   </p>
+   <p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+    Accès dico des css
+    </a>
+
+   </p>
+ 
+   <p>
+    voici une liste sans ordre:
+    <ul>
+        <li>pain</li>
+        <li>lait</li>
+        <li>fromage</li>
+    </ul>
+   voici une liste avec ordre:
+<ol>
+    <li>mettre le fromage sur le pain</li>
+    <li>manger le pain</li>
+    <li>boire le lait</li>
+</ol>
+   </p>
+
+   
+<img src="./img/img valorant 2.jpg">
+
+
+
 </body>
 </html>
+
